--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,8 @@ classifiers = [
 ]
 
 [project.urls]
-Repository = "https://github.com/pvcnt/py-perses.git"
-Issues = "https://github.com/pvcnt/py-perses/issues"
+Repository = "https://github.com/pvcnt/pyperses.git"
+Issues = "https://github.com/pvcnt/pyperses/issues"
 
 [build-system]
 requires = ["pdm-backend"]
